--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Harrison Pinto", email = "hpintom@unal.edu.co" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "numpy>=2.3.5",
+]
 
 [project.scripts]
 hmm-smart-keyboard = "hmm_smart_keyboard:main"
