--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "nltk>=3.9.2",
     "numpy>=2.3.5",
+    "wordfreq>=3.1.1",
 ]
 
 [project.scripts]
