Add `ruff` extension to the recommended ones

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "ms-python.autopep8",
     "usernamehw.errorlens",
     "davidanson.vscode-markdownlint",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "charliermarsh.ruff"
   ]
 }
