--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,4 +99,6 @@ ignore = [
     "TRY003", # Tryceratops - Checks for long exception messages that are not defined in the exception class itself.
     "EM101", # Flake8-errmsg - Checks for the use of string literals in exception constructors.
     "PLR0913", # Pylint - too many arguments in function/method
+    "FBT001", # Flake8-boolean-trap - using boolean values as default argument values
+    "FBT002", # Flake8-boolean-trap - using boolean values in logical operations
 ]
